fix x-overflow

--- a/style.css
+++ b/style.css
@@ -1,5 +1,4 @@
 * {
-    overflow-x: hidden; /* Hides horizontal overflow */
     box-sizing: border-box;
 }
 
